apps/media/sonarr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:3.0.4.1026-ls12
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8989
          name: sonarr
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "300Mi"
            cpu: 1
        volumeMounts:
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /tv
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: longhorn-pvc-sonarr
      - name: tv
        nfs:
          server: 10.0.40.2
          path: /mnt/vault/Media/Series
      - name: downloads
        nfs:
          server: 10.0.40.2
          path: /mnt/vault/Media/downloads/completed
