apps/media/sonarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  ports:
  - name: sonarr
    targetPort: sonarr
    port: 8989
  selector:
    app: sonarr
