apps/media/sonarr/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sonarr.home-lab.io
    http:
      paths:
      - path:
        backend:
          serviceName: sonarr
          servicePort: 8989
